--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "MLO SPAMBOT",
-  "description": "POWERFUL SPAMBOT, MANAGED BY THE DEVELOPERS OF MLO",
-  "logo": ".................",
+  "name": "HearTless SPAMBOT",
+  "description": "POWERFUL SPAMBOT, MANAGED BY THE DEVELOPERS OF VsB",
+  "logo": "https://telegra.ph/file/2d60677757b97ecaf6726.jpg",
   "keywords": [
     "spambot",
     "telegram",
